# sentinAI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
artifacts/: run_1497dc2e-84c1-4ef9-9790-73f2e59e5ba1_20260618T213303.json  run_240b943f-55f4-42f3-a7ae-c834426795af_20260618T213107.json  status_report_20260618T174408.md  status_report_20260618T192258.md  status_report_20260618T211805.md
config/: prompts.yaml  simulation_profiles.yaml
config/agents/: openrouter_models.yaml
config/data/: dummy_config.json
config/models/: schemas.yaml
deployment/k8s/: silver-pipeline-deployment.yaml
docs/: COMPLIANCE_JUSTIFICATION_QUARANTINE_PATTERN.md  TECHNICAL_PROJECT_PROPOSAL_SENTINAI.md
docs/audit/: m_pesa_fy26_calibration.md
eval/: README.md  __init__.py  evaluate.py  synthetic_cases.py  verify_pipeline_retention.py
scripts/: run_audit_and_synth.py  run_bronze.py  run_gold.py  run_medallion_pipeline.py  run_silver.py
scripts/artifacts/: run_010520cd-4f95-4a9e-bdd4-3e46a5b7b42f_20260625T065954.json  run_1fe7bfae-9187-4ea5-a0ed-abff3f4d966c_20260625T075652.json  status_report_20260701T074323.md
src/agents/: __init__.py  analyst.py  auditor.py  base.py  graph.py  prompts.py  researcher.py  state.py  tools.py
src/core/: config.py  factory.py
src/data/: bronze.py  connectors.py  features.py  lineage_decorator.py  schemas.py  synthetic_engine.py  validators.py
src/datasets/: __init__.py  gold.py  registry.py  schemas.py  silver.py
src/models/: hooks.py
src/retrieval/: INGESTION_COMPLETION_REPORT.md  cbk_amln_tf_guidelines.md  daraja_api_callback_payload.md  ingestion.py  mpesa_fraud_xgboost_card.md  schemas.py  (+6 more)
tests/: test_silver_validation.py
(+6 files in other folders)
