[tool.poetry]
name = "sentinai"
version = "0.1.0"
description = "Autonomous, agentic AI platform for enterprise financial compliance"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^24.0.0"

[tool.poetry.group.core.dependencies]
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.4.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
shap = "^0.45.0"
scipy = "^1.13.0"

[tool.poetry.group.agent.dependencies]
langgraph = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langgraph-checkpoint-sqlite = "^2.0.0"

[tool.poetry.group.data.dependencies]
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
openlineage-python = "^1.15.0"
boto3 = "^1.34.84"
tenacity = "^8.3.0"
polars = "^0.20.18"
great-expectations = "^0.18.12"
pandera = {extras = ["polars"], version = "^0.20.0"}
rapidfuzz = "^3.7.0"
duckdb = "^0.10.1"

[tool.poetry.group.rag.dependencies]
chromadb = "^0.5.0"
sentence-transformers = "^2.6.1"
pypdf = "^5.0.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "B"] # pycodestyle, pyflakes, isort, flake8-bugbear
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

